--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -51,7 +51,8 @@ jobs:
 
       - name: Deploy to GKE
         run: |
-          cd /helm
+          cd helm
           env subst '${{github.sha}}' < Chart.yaml > dumpfile && mv dumpfile Chart.yaml
           env subst '${{github.sha}}' < values.yaml > dumpfile && mv dumpfile values.yaml
-          helm install ci-cd-pipeline . --version 0.0.${{ github.sha}} --namespace development --values values.yaml --wait --timeout 300s
+          helm dependency build
+          helm upgrade --wait --timeout 300s --atomic --install ci-cd-pipeline . --version 0.0.${{ github.sha}} --namespace development --values values.yaml
