--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -54,5 +54,5 @@ jobs:
           cd helm
           env subst '${{github.sha}}' < Chart.yaml > dumpfile && mv dumpfile Chart.yaml
           env subst '${{github.sha}}' < values.yaml > dumpfile && mv dumpfile values.yaml
-          helm dependency build
-          helm upgrade --wait --timeout 300s --atomic --install ci-cd-pipeline . --version 0.0.${{ github.sha}} --namespace development --values values.yaml
+          helm dependency build helm
+          helm upgrade --wait --timeout 300s --atomic --install ci-cd-pipeline helm --version 0.0.${{ github.sha}} --namespace development --values values.yaml
